# fasoarzeka

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  INSTALLATION_GUIDE.md  MANIFEST.in  README.md  __init__.py  arzeka.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py
docs/: AUTHENTICATION.md  AUTO_REAUTH.md  MODIFICATIONS_SUMMARY.md  QUICKSTART.md  README_TRANSLATIONS.md  TOKEN_VALIDATION.md
docs_sphinx/: DOCUMENTATION_COMPLETE.md  GUIDE_DOCS.md  GUIDE_MIGRATION_SPHINX.md  Makefile  README_DOCS.md  advanced_features.rst  authentication.rst  build.sh  changelog.rst  conf.py  contributing.rst  error_handling.rst  index.rst  installation.rst  license.rst  payment_operations.rst  quickstart.rst
docs_sphinx/_static/: custom.css
docs_sphinx/api/: arzeka.rst  exceptions.rst  modules.rst  utils.rst
docs_sphinx/examples/: authentication_examples.rst  basic_usage.rst  error_handling_examples.rst  payment_examples.rst
examples/: authentication_example.py  auto_reauth_example.py  example.py  shared_client_example.py  test_auto_reauth.py  test_signature_improvements.py  token_validation_example.py
fasoarzeka/: __init__.py  arzeka.py  exceptions.py  i18n.py  utils.py
fasoarzeka/locales/fr/LC_MESSAGES/: arzeka.po
scripts/: compile_messages.sh  extract_messages.sh
test/: test.py
