[project]
name = "faso-arzeka"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "Library for faso-arzeka sms"
authors = [{ name = "Mohamed ZEBA", email = "parice02@hotmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dynamic = ["version"]
license = { file = "LICENSE" }
dependencies = ["requests>=2.31.0"]
keywords = [
    "burkina faso sms",
    "faso-arzeka sms",
    "burkina sms",
]

[project.urls]
Homepage = "https://github.com/parice02/faso-arzeka"
Issues = "https://github.com/parice02/faso-arzeka/issues"
Repository = "https://github.com/parice02/faso-arzeka.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
