[project]
name = "fasoarzeka"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "API non officiel pour les paiements mobiles le moyen de paiement FASO ARZEKA au Burkina Faso"
authors = [{ name = "Mohamed ZEBA", email = "m.zeba@mzeba.dev" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dynamic = ["version"]
license = { file = "LICENSE" }
dependencies = ["requests>=2.31.0", "urllib3<1.27"]
keywords = [
    "fasoarzeka ",
    "burkina payment api",
]

[project.urls]
Homepage = "https://github.com/parice02/fasoarzeka"
Issues = "https://github.com/parice02/fasoarzeka/issues"
Repository = "https://github.com/parice02/fasoarzeka.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"fasoarzeka" = [
    "locales/*/LC_MESSAGES/*.mo",
    "locales/*/LC_MESSAGES/*.po",
]

[tool.setuptools]
include-package-data = true
